[project]
name = "rekor_monitor_nyu_sscs"
version = "4.0"
description = "A Python monitor for Sigstore's Rekor transparency log."
authors = [
    { name = "Yongjae Chung", email = "yc3028@nyu.edu" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
packages = [{ include = "src" }]

dependencies = [
    "cryptography (==3.4.8)",
    "requests (==2.32.5)",
    "types-requests (==2.32.4.20250913)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0.0",
    "ruff>=0.14.4,<0.15.0",
    "pylint>=4.0.2,<5.0.0",
    "bandit>=1.8.6,<2.0.0",
    "autodocstring>=0.1.2,<0.2.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "jsonschema>=4.25.1,<5.0.0",
    "responses>=0.25.8,<0.26.0",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -ra"

[tool.coverage.run]
command_line = "-m pytest"
source = ["src"]

[project.scripts]
rekor_monitor_nyu_sscs = 'rekor_monitor_nyu_sscs.main:main'